--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,8 +1,20 @@
 nav {
   display: flex;
   justify-content: space-between;
-  padding: 50px 10px;
-  padding-left: 40px;
+  padding: 50px 10px 0px;
+  padding-left: 50px;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+  left: 0;
+}
+
+.nav--scrolled {
+  background: rgba(0, 0, 0, 0.8);
+  align-items: center;
+  transition: all 1s;
+  top: 10px;
+  padding-top: 0px;
 }
 
 .nav__links {
@@ -15,5 +27,16 @@ nav {
 
 .nav__links a {
   text-decoration: none;
+  font-family: "Roboto", sans-serif;
   color: white;
+}
+
+@media screen and (max-width: 900px) {
+  nav {
+    padding-left: 20px;
+  }
+
+  .nav__links {
+    display: none;
+  }
 }
