--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,13 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 @import url("./Navbar.css");
+@import url("./HeroSection.css");
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
   color: white;
-  font-family: "Roboto", sans-serif;
 }
 
 html,
@@ -19,8 +19,10 @@ body {
 
 main {
   margin: 0px 20px;
-  height: 100vh;
-  /* To be removed */
-  border-top: none;
-  border-bottom: none;
+}
+
+@media screen and (max-width: 900px) {
+  main {
+    margin: 0px 0px;
+  }
 }
