--- a/src/styles/WhatIsHTS.css
+++ b/src/styles/WhatIsHTS.css
@@ -2,188 +2,182 @@
     /* too be edited */
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     height: 100vh;
-    width: 100%;
-    background-color: #f0f0f0;
-    padding: 20px;
+    width: 1440px;
+}
+.whatIs--image {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    object-fit: fill;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+.whatIs-image__1, .whatIs-image__2 {
+     flex: 1 1 45%;  /* Flex-grow, flex-shrink, flex-basis  */
+    margin: 10px;
     box-sizing: border-box;
 }
-/* .whatIs-content__div{
-    display: flex;
-    justify-content: space-between;
-} */
-.whatIs-main__image{
-    position: absolute;
-    width: 60%;
-    height: 120%;
-    left: -350px;
-    top: 2251px;
-
+.whatIs-image__1 img,
+.whatIs-image__2 img {
+    width: 100%;
 }
-/* .whatIs-text__container{
-    display: flex;
 
-} */
-.whatIs-text__shadow{
+.whatIs-image__container {
+    position: relative;
+    left: -16%;
+}
+.whatIs-text__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+    position: relative;
+}
+
+.whatIs-text__shadow {
     position: absolute;
-    width: 842px;
+    width: 846px;
     height: 299px;
-    /* left: 0px;
-    top: 0px; */
+    left: -20px;
+    top: -70px;
 
     font-family: 'Anton';
     font-style: normal;
     font-weight: 400;
-    font-size: 300px;
+    font-size: 270px;
     line-height: 99.83%;
-    /* or 299px */
 
     color: rgba(255, 255, 255, 0.16);
 }
-
-
-/* WHAT IS HACKTHESPACE ? */
-.whatIs-text__heading{
-
+.whatIs-text__heading {
     position: absolute;
     width: 788px;
     height: 83px;
-    /* left: 44px;
-    top: 170px; */
+    padding-left: 15px;
+    top: 70px;
 
     font-family: 'Anton';
     font-style: normal;
     font-weight: 400;
-    font-size: 83px;
+    font-size: 70px;
     line-height: 99.83%;
-    /* identical to box height, or 83px */
 
     color: #FFFFFF;
 }
-
-.whatIs-text__para1{
+.whatIs-text__para {
+    text-wrap: wrap;
+}
+/* .whatIs-text__para1 {
     position: absolute;
     width: 686px;
     height: 84px;
-    /* left: 115px;
-    top: 325px; */
+    top: 200px;
 
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 172%;
-    /* or 28px */
     text-align: right;
     letter-spacing: 0.08em;
 
     color: #FFFFFF;
 }
-
-.whatIs-text__para2{
+.whatIs-text__para2 {
     position: absolute;
     width: 686px;
     height: 168px;
-    /* left: 115px;
-    top: 464px; */
+    top: 210px;
 
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 172%;
-    /* or 28px */
     text-align: right;
     letter-spacing: 0.08em;
 
     color: #FFFFFF;
-}
+} */
 
-/* Media Queries for responsiveness */
-
+/* Media Queries */
 @media screen and (max-width: 900px) {
-    .whatIs-main__image {
-        width: 80%;
-        left: -250px;
-    }
-
     .whatIs-text__shadow {
         font-size: 200px;
+        width: 650px;
+        height: 230px;
+        top: -50px;
     }
-
     .whatIs-text__heading {
-        font-size: 60px;
+        font-size: 50px;
+        width: 600px;
+        top: 60px;
     }
-
     .whatIs-text__para1,
     .whatIs-text__para2 {
-        width: 600px;
+        width: 550px;
+        font-size: 14px;
+        top: 180px;
     }
 }
 
-@media screen and (max-width: 700px) {
-    .whatIs--section {
-        flex-direction: column;
-    }
-
-    .whatIs-main__image {
-        width: 90%;
-        left: -200px;
-    }
-
+@media screen and (max-width: 768px) {
     .whatIs-text__shadow {
         font-size: 150px;
+        width: 500px;
+        height: 180px;
+        top: -40px;
     }
-
     .whatIs-text__heading {
-        font-size: 50px;
+        font-size: 40px;
+        width: 500px;
+        top: 50px;
     }
-
     .whatIs-text__para1,
     .whatIs-text__para2 {
-        width: 500px;
-        font-size: 14px;
+        width: 450px;
+        font-size: 12px;
+        top: 160px;
     }
 }
 
 @media screen and (max-width: 550px) {
-    .whatIs-main__image {
-        width: 100%;
-        left: -150px;
+    .whatIs-image__1, .whatIs-image__2 {
+        flex: 1 1 45%; /* Flex-grow, flex-shrink, flex-basis */
+        margin: 10px;
+        box-sizing: border-box;
     }
-
-    .whatIs-text__shadow {
-        font-size: 120px;
+    .whatIs-image__container {
+        display: none;
     }
-
-    .whatIs-text__heading {
-        font-size: 40px;
-    }
-
-    .whatIs-text__para1,
-    .whatIs-text__para2 {
-        width: 400px;
-        font-size: 12px;
-    }
-}
-
-@media screen and (max-width: 450px) {
-    .whatIs-main__image {
-        left: -100px;
-    }
-
     .whatIs-text__shadow {
         font-size: 100px;
+        width: 300px;
+        height: 130px;
+        top: -30px;
     }
-
     .whatIs-text__heading {
         font-size: 30px;
+        width: 300px;
+        top: 40px;
     }
-
     .whatIs-text__para1,
     .whatIs-text__para2 {
         width: 300px;
         font-size: 10px;
+        top: 140px;
     }
 }
+@media screen and (max-width: 450px) {
+    .hero-section__content {
+      font-size: 3.5rem;
+    }
+  
+    .hero-section__buttons button {
+      width: 6.60194rem;
+      height: 1.52519rem;
+      font-size: 0.8rem;
+    }
+  }
