--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  /* color: white; */
 }
 
 html,
@@ -18,6 +19,7 @@ body {
   overflow-x: hidden;
   background-color: black;
   color: white;
+
 }
 
 main {
