FAQs section added

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,8 +3,7 @@
 @import url("./Navbar.css");
 @import url("./HeroSection.css");
 @import url("./AboutUs.css");
-
-
+@import url("./FAQsSection.css");
 
 * {
   box-sizing: border-box;
