--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 @import url("./Navbar.css");
 @import url("./HeroSection.css");
 @import url("./AboutUs.css");
-
-
+@import url("./Tracks.css");
 
 * {
   box-sizing: border-box;
@@ -19,7 +19,6 @@ body {
   overflow-x: hidden;
   background-color: black;
   color: white;
-
 }
 
 main {
