--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -8,10 +8,14 @@
 
 .hero-section__content {
   font-family: "Anton";
-  font-size: 7rem;
+  font-size: 8rem;
   line-height: 1;
-  letter-spacing: 0.09em;
+  letter-spacing: 0.01em;
   padding-left: 40px;
+}
+
+.hero-section__content h1 {
+  font-weight: 400;
 }
 
 .hero-section__content > div {
@@ -21,7 +25,7 @@
 
 .outlined-text {
   color: black;
-  -webkit-text-stroke: 2px white;
+  -webkit-text-stroke: 1.5px white;
 }
 
 .hero-section__buttons {
@@ -44,7 +48,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  
 }
 
 .hero-section__buttons button a {
