--- a/src/styles/FAQsSection.css
+++ b/src/styles/FAQsSection.css
@@ -1,5 +1,6 @@
-.faqs--section{
-    box-sizing: border-box;
+.faqs--section {
+  box-sizing: border-box;
+  background-color: black;
 }
 .faqs--text{
     display: flex;
@@ -74,18 +75,18 @@
 }
 
 .question {
-    width: 100%;
-    z-index: 1;
-    position: relative;
-    height: 46px;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    cursor: pointer;
-    background: none;
-    outline: none;
-    border: none;
+  width: 100%;
+  z-index: 1;
+  position: relative;
+  height: 46px;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+  background: none;
+  outline: none;
+  border: none;
 
     /* font-family: 'Roboto Condensed'; */
     font-style: normal;
@@ -96,7 +97,7 @@
     color: #FFFFFF;
 }
 .question--box .question.active::after {
-    transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 .question--box .question::after {
     content: "";
