--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,7 @@
 @import url("./Tracks.css");
 @import url("./FAQsSection.css");
 @import url("./preloader.css");
+@import url("./particle.css");
 
 * {
   box-sizing: border-box;
@@ -19,12 +20,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: black;
   color: white;
-}
-
-main {
-  margin: 0px 20px;
 }
 
 /* scrollbar styling */
