footer added, changes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,7 @@
 @import url("./FAQsSection.css");
 @import url("./preloader.css");
 @import url("./particle.css");
+@import url("./Footer.css");
 
 * {
   box-sizing: border-box;
