--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -53,9 +53,7 @@ nav {
   nav {
     padding-left: 20px;
   }
-  .nav--scrolled {
-    background: transparent;
-  }
+
   .nav__links {
     flex-direction: column;
     background: rgba(0, 0, 0, 0.8);
@@ -66,7 +64,10 @@ nav {
     padding: min(10vh, 10rem);
     transition: all 500ms;
     transform: translateX(100%);
+    height: 100vh;
+    z-index: 1;
   }
+
   .nav__links.nav__links--open {
     transform: translateX(0%);
   }
@@ -78,7 +79,6 @@ nav {
     position: absolute;
     z-index: 9999;
     width: 2rem;
-    top: 2rem;
     right: 1rem;
   }
   .mlh-flag {
@@ -87,5 +87,17 @@ nav {
   }
   .mlh-flag img {
     max-width: 60px; /* Smaller size for mobile */
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #logo {
+    width: 120px;
+    height: 50px;
+  }
+
+  #hamburger {
+    width: 30px;
+    height: 30px;
   }
 }
