--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -1,7 +1,7 @@
 .hero-section {
   height: 100vh;
   overflow: hidden;
-  background-color: black;
+  position: relative;
 }
 
 .hero-section > div {
