--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -10,11 +10,9 @@ nav {
 }
 
 .nav--scrolled {
-  background: rgba(0, 0, 0, 0.8);
   align-items: center;
-  transition: all 1s;
-  top: 10px;
   padding-top: 0px;
+  height: 70px;
 }
 
 .nav__links {
@@ -24,12 +22,31 @@ nav {
   font-size: 0.9375rem;
   font-weight: 400;
   list-style: none;
+  margin-right: 50px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.nav__links--scrolled{
+  background: rgba(0, 0, 0, 0.8);
+  border-radius: 50px;
+  padding: 15px 40px;
+  filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.8));
+  transition: all 1s;
+}
+
+.nav__links li{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .nav__links a {
   text-decoration: none;
   font-family: "Roboto", sans-serif;
-  color: white;
+  color: white; 
+  width: max-content;
 }
 .mlh-flag {
   display: block;
@@ -66,6 +83,12 @@ nav {
     transform: translateX(100%);
     height: 100vh;
     z-index: 1;
+    margin-right: 0px;
+  }
+
+  .nav__links--scrolled{
+    border-radius: 0;
+    filter: none;
   }
 
   .nav__links.nav__links--open {
