--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -4,7 +4,6 @@
   height: 100vh;
   padding: 20px;
   box-sizing: border-box;
-  margin: 0 20px;
 }
 
 .heading1 {
@@ -41,15 +40,24 @@
   margin-bottom: 20px;
   margin-left: 5%;
   line-height: 1.5;
-  font-size: 1.3vw;
+  font-size: 1.2rem;
   text-align: justify;
   font-family: "roboto";
+  position: relative;
 }
 
 .ParaDiv1 > p,
 .ParaDiv2 > p {
   display: flex;
   flex-wrap: wrap;
+}
+
+.ParaDiv1 > p > span,
+.ParaDiv2 > p > span {
+  position: relative;
+  overflow: hidden;
+  display: inline-flex;
+  margin-right: 4px;
 }
 
 .ParaDiv1 .word,
@@ -63,17 +71,15 @@
   opacity: 20%;
 }
 
-.ParaDiv1 {
-  width: 40%;
-  font-size: 16px;
-}
-
 .ParaDiv2 {
   width: 80%;
-  font-size: 16px;
 }
 
 @media (max-width: 768px) {
+  .AboutUsDiv {
+    height: 70vh;
+  }
+
   .heading1 {
     font-size: 20vw;
     margin-left: 1%;
@@ -93,7 +99,7 @@
 
   .ParaDiv1,
   .ParaDiv2 {
-    font-size: 2vw;
+    font-size: 0.9rem;
     margin-left: 5%;
   }
   .ParaDiv1 {
@@ -124,8 +130,14 @@
 
   .ParaDiv1,
   .ParaDiv2 {
-    font-size: 3vw;
+    font-size: 0.7rem;
     margin-left: 5%;
-    width: 80%;
+    width: 90%;
+  }
+}
+
+@media (min-height: 780px) and (max-width: 500px) {
+  .AboutUsDiv {
+    height: 55vh;
   }
 }
