--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+@import url("./index.css");
 @import url("./Navbar.css");
 @import url("./HeroSection.css");
 @import url("./AboutUs.css");
+@import url("./glimpse.css");
 @import url("./Tracks.css");
 @import url("./FAQsSection.css");
 @import url("./preloader.css");
@@ -22,6 +24,10 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   color: white;
+}
+
+main {
+ background-color: black;
 }
 
 /* scrollbar styling */
