--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,7 +24,6 @@ body {
   color: white;
 }
 
-/* scrollbar styling */
 ::-webkit-scrollbar:horizontal {
   display: none;
 }
@@ -32,17 +31,25 @@ body {
   width: 10px;
   background-color: black;
 }
-/* Handle */
+
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(#572fde, #9435d9);
+  background: linear-gradient(
+    rgba(255, 255, 255, 0.16),
+    #ffffff,
+    rgba(255, 255, 255, 0.16)
+  );
   border-radius: 5px;
-  border: 2px solid transparent;
+  border: 0;
   background-clip: padding-box;
   width: 5px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  border: 0;
-  background: linear-gradient(#9435d9, #572fde);
+  border: 5px white;
+  background: #ffffff;
+}
+::-webkit-scrollbar-thumb:active {
+  background: rgba(255, 255, 255, 0.16);
+  border: #ffffff;
 }
 
 @media screen and (max-width: 900px) {
